[package]
name = "stock-wallet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
csv = "1.1.6"
futures = "0.3.28"
reqwest = "0.11.16"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.95"
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["rt", "macros", "rt-multi-thread"] }
